--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 spring.application.name=demo
 server.port=80
+spring.datasource.url=jdbc:mysql://database-1.cdkge6y4shf0.ap-northeast-2.rds.amazonaws.com:3306/demo_db
+spring.datasource.username=admin
+spring.datasource.password=vnvn2900
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.order_inserts=true
+spring.jpa.properties.hibernate.order_updates=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.type.descriptor.sql.BasicBinder=TRACE
